gitops/components/apps/tasklist/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist
  annotations:
    app.openshift.io/connects-to: database
    app.openshift.io/vcs-uri: 'https://github.com/jmetso/tasklist-cicd'
    argocd.argoproj.io/sync-wave: "200"
  labels:
    app: tasklist
    app.kubernetes.io/name: server
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: server
    app.openshift.io/runtime: spring
    app.kubernetes.io/part-of: tasklist
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tasklist
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tasklist
        name: tasklist
    spec:
      containers:
        - name: server
          image: >-
            image-registry.openshift-image-registry.svc:5000/tasklist-dev/tasklist:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
