gitops/components/apps/tasklist/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist
  labels:
    app: tasklist
    app.kubernetes.io/name: tasklist
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: tasklist
  annotations:
    argocd.argoproj.io/sync-wave: "200"
spec:
  ports:
  - name: http
    port: 8080
  selector:
    name: tasklist
  sessionAffinity: None
  type: ClusterIP
