gitops/components/apps/tasklist/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tasklist
  labels:
    app: tasklist
    app.kubernetes.io/name: tasklist
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: server
    endpoint: tasklist
  annotations:
    argocd.argoproj.io/sync-wave: "200"
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: http
  to:
    kind: Service
    name: tasklist
